--- a/config-server-client-production.properties
+++ b/config-server-client-production.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is from config server - Prodcution Environment
+msg = Hello world - this is from config server - Prodcution Environment - Edited at 15.15PM
